Add intial cv website files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Manohar site</title>
   </head>
   <body><table cellspacing="20">
+    <img src="file:///C:/Users/91834/OneDrive/Desktop/Beach%20memories/DSC_0943.JPG" height="175" width="150" alt="manohar" />
     <tr>
       <td>
-        <img src="file:///C:/Users/91834/OneDrive/Desktop/Beach%20memories/DSC_0933.JPG" hieght="175" width="175" alt="Manohar Mogal" />
-      </td><td>
         <em>Dhankula cricket team main player<strong><a href="http://www.diet.ac.in">Check Here</a></strong></em><br />
         I am studnet of CSE department .
       </p>
