--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Manohar site</title>
   </head>
   <body><table cellspacing="20">
-    <img src="file:///C:/Users/91834/OneDrive/Desktop/Beach%20memories/DSC_0943.JPG" height="175" width="150" alt="manohar" />
+    <img src="C:\Users\91834\OneDrive\Desktop\New folder\manu\html.photo.jpg" alt="manohar" />
     <tr>
       <td>
         <em>Dhankula cricket team main player<strong><a href="http://www.diet.ac.in">Check Here</a></strong></em><br />
